Add Service and edit barbers POST,GET, DELETE, PUT
