# controllers/ServicesController.js
@@ -4,16 +4,16 @@ const { getBaseurl } = require("./helpers")
 
 // CREATE
 exports.createNew = async (req, res) => {
-    if (!req.body.name) {
+    if (!req.body.service_name|| !req.body.price|| !req.body.description) {
         return res.status(400).send({ error: "Required parameter 'name' is missing" })
     }
     const createdService = await services.create({ ...req.body }, {
         fields: ["service_name","price","description"]
     })
     res.status(201)
-        .location(`${getBaseurl(req)}/services/${createdPlayer.id}`)
-        .send(createdPlayer)
-}
+        .location(`${getBaseurl(req)}/services/${createdService.id}`)
+        .send(createdService)
+} 
 // READ
 exports.getAll = async (req, res) => {
     const result = await services.findAll({ attributes: ["id","service_name",] })
@@ -28,7 +28,12 @@ exports.getById = async (req, res) => {
 }
 // UPDATE
 exports.editById = async (req, res) => {
-    const updateResult = await services.update({ ...req.body }, {
+    const foundPlayer = await services.findByPk(req.params.id)
+    if (foundPlayer === null) {
+        return res.status(404).send({ error: `Service  not found` })
+    }
+    
+    const updateResult = await services.update({ ...foundPlayer,...req.body }, {
         where: { id: req.params.id },
         fields: ["service_name","price","description"]
     })
